--- a/people.html
+++ b/people.html
@@ -213,6 +213,47 @@
 
 
         </div>
+
+	<div class="row profile">
+        <br>
+	<h3><b>&nbsp&nbsp&nbsp&nbspSince 2021</b></h3>
+	<br>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="row">
+                    <div class="col-md-5"><img src="images/zhangyu.jpg" width="120px" height="120px" alt=""
+                            class="stu-img"></div>
+                    <div class="col-md-6">
+                        <b>
+                            Yu Zhang
+                            <br>
+                            <a href="mailto:zhangyucs@outlook.com">666@outlook.com</a>
+                            <br>
+                            <a href="https://github.com/zhangyucs">[Github]</a>
+                        </b>
+                    </div>
+                </div>
+            </div>
+			
+			
+	    <div class="col-md-4 col-sm-6 col-xs-12">
+                <div class="row">
+                    <div class="col-md-5"><img src="images/hansai.jpg" width="120px" height="120px" alt=""
+                            class="stu-img"></div>
+                    <div class="col-md-6">
+                        <b>
+                            Sai Han
+                            <br>
+                            <a href="mailto:#">email@email.com</a>
+                            <br>
+                            <a href="#">[Github]</a>
+                        </b>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+	    
     </div>
 
 
